feat: added social statistics, ban reasons, and videos metadata to user export
